# yasumu

./: .gitattributes  .gitignore  .mcp.json  .npmrc  .opencode.json  .oxfmtrc.json  .prettierignore  .prettierrc.json  .yarnrc.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  turbo.json
.agents/skills/brainstorming/: SKILL.md  spec-document-reviewer-prompt.md  visual-companion.md
.agents/skills/frontend-design/: SKILL.md
.agents/skills/next-best-practices/: SKILL.md  async-patterns.md  bundling.md  data-patterns.md  debug-tricks.md  directives.md  error-handling.md  file-conventions.md  font.md  hydration-error.md  image.md  metadata.md  parallel-routes.md  route-handlers.md  rsc-boundaries.md  runtime-selection.md  scripts.md  self-hosting.md  suspense-boundaries.md
.agents/skills/nuqs/: AGENTS.md  SKILL.md
.agents/skills/posthog-instrumentation/: SKILL.md
.agents/skills/react-useeffect/: SKILL.md  alternatives.md  anti-patterns.md
.agents/skills/refactor-safely/: skill.md
.agents/skills/shadcn/: SKILL.md  cli.md  customization.md  mcp.md
.agents/skills/vercel-react-best-practices/: AGENTS.md  SKILL.md
.claude/skills/debug-issue/: skill.md
.claude/skills/explore-codebase/: skill.md
.claude/skills/review-changes/: skill.md
.devin/: wiki.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: canary.yml  cargo.yml  lint.yml  publish-tanxium.yml  release.yml
apps/cli/: package.json
apps/desktop/: README.md  package.json
apps/docs/: README.md  eslint.config.mjs  next.config.mjs  package.json  source.config.ts  tsconfig.json
apps/old/: .gitignore  next.config.ts  package.json
apps/website/: package.json
apps/www/: README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/www-vite/: App.tsx  README.md  index.html  metadata.json  package.json
apps/www-vite/components/: AppPreview.tsx  Footer.tsx  Navbar.tsx
apps/www-vite/pages/: Changelog.tsx  Download.tsx  Home.tsx
apps/www/app/: layout.tsx  page.tsx  styles.css
apps/www/components/: AppPreview.tsx  BackgroundGrid.tsx  app-preview.tsx  footer.tsx  navbar.tsx  nepal-flag.tsx
apps/yasumu/: .gitignore  AGENTS.md  README.md  components.json  eslint.config.mjs  global.d.ts  global.ts  next.config.ts  package.json  transletta.config.ts  tsconfig.json  vite.config.ts
apps/yasumu/scripts/: copy-tanxium.mjs  deno.ts.txt  generate-icon.ts  generate-typedef.ts
apps/yasumu/src/: App.tsx  instrumentation-client.ts  main.tsx
apps/yasumu/src-tauri/: .gitignore  Cargo.toml  build.rs  deno.json  tauri.conf.canary.json  tauri.conf.json
apps/yasumu/src-tauri/capabilities/: default.json
apps/yasumu/src-tauri/icons/: icon.icns
apps/yasumu/src-tauri/resources/: ops.d.ts  yasumu-internal.d.ts
apps/yasumu/src-tauri/resources/yasumu-scripts/: init.ts  main.ts  patch.ts  preload.ts  test.tsx  worker.ts
apps/yasumu/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/yasumu/src-tauri/src/tanxium/: bootstrap.js  mod.rs  module_loader.rs  node_services.rs  ops.rs  permissions.rs  state.rs  types.rs  version.rs  worker.rs  yasumu_modules.rs
apps/yasumu/src-tauri/src/tanxium/runtime/: bootstrap.ts  internal.d.ts  message-queue.ts  patches.ts  ui.ts  utils.ts  yasumu-request.ts  yasumu-workspace-context.ts
apps/yasumu/src-tauri/src/tanxium/runtime/modules/: collection.ts  jsx-runtime.ts
apps/yasumu/src-tauri/src/tanxium/runtime/ui/: jsx-runtime.ts
apps/yasumu/translations/: en.json
changelogs/: 0.0.0_CHANGELOGS.md  0.0.1_CHANGELOGS.md
crates/tanxium/: Cargo.toml  README.md  build.rs
crates/tanxium-cli/: Cargo.toml  README.md  build.rs
crates/tanxium-cli/src/: main.rs  repl.rs  terminal_host.rs
crates/tanxium-yasumu/: Cargo.toml
crates/tanxium-yasumu/src/: lib.rs
crates/tanxium/docs/: cli.md  embedding.md  publishing.md
crates/tanxium/src/: generated_runtime_contract.rs  lib.rs  module_loader.rs  node_services.rs  ops.rs  permissions.rs  runtime.rs  snapshot.rs  state.rs  types.rs  version.rs  worker.rs  yasumu_modules.rs
crates/tanxium/src/runtime/: bootstrap.ts  common.ts  generated-runtime-contract.ts  generated-runtime-protocol.ts  internal.d.ts  ops.js  patches.ts  ui.ts  utils.ts  yasumu-request.ts  yasumu-workspace-context.ts
crates/tanxium/src/runtime/modules/: env.ts  files.ts  runtime-api-bridge.ts  runtime.ts  test.js  workspace.ts
crates/tanxium/tests/fixtures/: context.ts
denosrc/: module_loader.rs  node.rs  web_worker.rs  worker.rs
docs/: echo-server.md  headless-architecture-refactor-spec.md  headless-architecture.md
docs/superpowers/specs/: 2026-07-13-tanxium-rust-workspace-design.md  2026-07-20-graphql-subscriptions-and-interpolation-design.md  2026-07-20-rest-sse-response-and-cookie-jar-design.md  2026-07-20-sse-module-design.md
email-test/: send-email.ts
scripts/: install-tanxium.ps1  install-tanxium.sh
test-workspace/: README.md
test-workspace/synchronization-poc/: README.md
test-workspace/yasumu/: smtp.ysl  workspace.ysl  yasumu-lock.json
test-workspace/yasumu/environment/: ipapmufxwgm558jh1cpfbkwe.ysl
test-workspace/yasumu/rest/: agjmtdx4m9iebm3ps2nczort.ysl  cmwulsxe1z3ade8hbjgcguvd.ysl  gapu18kkiuuvymwjxgjw98rl.ysl  hhavyfd4qvikw6disdlb3j9a.ysl  (+2 more)
tests/tanxium-runtime/: package.json  tsconfig.json  vitest.config.ts
themes/: README.md  converter.ts
themes/presets/: tinte.chatgpt.css  tinte.clerk.css  tinte.ice.css  tinte.kebo.css  tinte.linear.css  tinte.perplexity.css  tinte.sketchpad.css  tinte.supabase.css  tinte.twitter.css  tweakcn.amethyst-haze.css  tweakcn.claude.css  tweakcn.cosmic-night.css  tweakcn.mono.css  tweakcn.pastel-dreams.css  tweakcn.perpetuity.css  tweakcn.t3-chat.css  tweakcn.tangerine.css  tweakcn.vercel.css  tweakcn.violet-bloom.css
turbo/generators/: config.cjs  config.ts
yasumu-server/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
(+520 files in other folders)
