[package]
name = "tanxium-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line JavaScript and TypeScript runtime powered by Tanxium"
repository = "https://github.com/neplextech/yasumu"
readme = "README.md"
keywords = ["deno", "javascript", "runtime", "typescript", "cli"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**", "README.md"]

[[bin]]
name = "tanxium"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tanxium.workspace = true

[build-dependencies]
deno_napi = "0.185.0"
