[package]
name = "yasumu"
version = "0.1.0"
description = "Yasumu desktop app"
authors = ["Neplex"]
edition = "2021"

[lib]
name = "yasumu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deno_core = "0.362.0"
deno_fs = "0.129.0"
deno_runtime = { version = "0.227.0", features = ["transpile"] }
deno_resolver = "0.50.0"
anyhow = "1"
tokio = { version = "1.41.0", features = ["full"] }
ureq = "2.10.1"
deno_ast = { version = "0.51.0", features = ["transpiling"] }
once_cell = "1.20.2"
dirs = "5.0.1"
crossbeam-channel = "0.5.13"
sys_traits = "=0.1.17"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rustls-pki-types = "1.0"
