[package]
name = "yasumu"
version = "0.1.0"
description = "Yasumu desktop app"
authors = ["Neplex"]
edition = "2024"

[lib]
name = "yasumu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deno_core = "0.363.0"
deno_fs = "0.131.0"
deno_runtime = { version = "0.229.0", features = ["transpile", "snapshot"] }
deno_resolver = "0.52.0"
deno_ast = { version = "0.51.0", features = ["transpiling"] }
deno_error = "0.7.0"
node_resolver = "0.59.0"
anyhow = "1"
tokio = { version = "1.41.0", features = ["full"] }
ureq = "2.10.1"
once_cell = "1.20.2"
dirs = "5.0.1"
crossbeam-channel = "0.5.13"
sys_traits = "=0.1.17"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rustls-pki-types = "1.0"
uuid = "1.18.1"
tauri-plugin-dialog = "2"
cuid2 = "0.1.4"
tauri-plugin-process = "2"
color-print = "0.3.7"
deno_terminal = "0.2.2"
tauri-plugin-os = "2"
