[package]
name = "yasumu"
version = "0.1.0"
description = "Yasumu desktop app"
authors = ["Neplex"]
edition = "2024"

[lib]
name = "yasumu_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deno_core = "0.407.0"
deno_fs = "0.164.0"
deno_runtime = { version = "0.262.0", features = ["transpile", "snapshot"] }
deno_resolver = "0.85.0"
deno_ast = { version = "0.53.2", features = ["transpiling"] }
deno_error = "0.7.1"
node_resolver = "0.92.0"
anyhow = "1"
tokio = { version = "1.41.0", features = ["full"] }
ureq = "2.10.1"
once_cell = "1.20.2"
dirs = "5.0.1"
crossbeam-channel = "0.5.13"
sys_traits = "0.1"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
rustls-pki-types = "1.0"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-dialog = "2"
cuid2 = "0.1.4"
tauri-plugin-process = "2"
color-print = "0.3.7"
deno_terminal = "0.2.2"
tauri-plugin-os = "2"
base64 = "0.22.1"
urlencoding = "2.1.3"
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[patch.crates-io]
gpu-allocator = { path = "vendor/gpu-allocator" }

[profile.release]
lto = true
opt-level = "s"
strip = true
